fixed modal margins on mobile

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -454,7 +454,7 @@ form p>i>span {
   }
 
   .modal-img {
-    margin-top: 0;
+    margin: auto;
     height: auto;
     width: 100vw;
   }
